--- a/faqs.html
+++ b/faqs.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Pagina prueba</title>
-	<link rel="stylesheet" href="resources/css/index.css">
+	<title>FAQS</title>
+	<link rel="stylesheet" href="resources/css/faqs.css">
 	<link rel="stylesheet" href="resources/iconos/icomoon/style.css">
 </head>
-<body>
-	<div id="arriba">
-		<i class="icon-circle-up"></i>
-	</div>
+<body class="hidden">
 	
+	<div class="centrado" id="onload">
+        <section>
+            <div class="pl pl-hourglass"></div>
+        </section>
+    </div>
 	<header>
 		<nav>
 			<div id="nav-up">
@@ -25,7 +27,7 @@
 					<img src="resources/img/logo-vectores.png" alt="">
 				</div>
 				<div class="enlaces" id="enlaces">
-					<ul>
+					<ul> 
 						<li><a href="#" id="enlace-home" class="btn-header">HOME</a></li>
 						<li><a href="#" id="enlace-aboutus" class="btn-header">ABOUT US</a></li>
 						<li><a href="#" id="enlace-ourteam" class="btn-header">OUR TEAM</a></li>
@@ -121,9 +123,16 @@
 				
 			</div>
 			<div id="footer-down">
-					<p><a href="">IBC Financial</a>©. All rights reserved.</p>
-				</div>
+				<p><a href="">IBC Financial</a>©. All rights reserved.</p>
+			</div>
+
+			<div id="arriba">
+				<i class="icon-circle-up"></i>
+			</div>
 		</footer>
-		<script src="resources/js/index.js"></script>
+
+		<script src="resources/js/load.js"></script>
+		<script src="resources/js/faqs.js"></script>
+		<script src="resources/js/nav.js"></script>
 	</body>
 	</html>
